# blueshot

./: .gitignore  README.md  flake.nix
.github/workflows/: build.yml
installer/windows/: Blueshot.wxs
src/Blueshot.Editor.Qt/: CMakeLists.txt  CanvasWidget.cpp  CanvasWidget.h  MainWindow.cpp  MainWindow.h  ae.humaidq.blueshot.desktop.in  main.cpp  resources.qrc
